--- a/Monthly_Sales_Prediction.ipynb
+++ b/Monthly_Sales_Prediction.ipynb
@@ -42,7 +42,7 @@
         "id": "NfFzPjc_LUUh"
       },
       "source": [
-        "#import pandas as pd\n",
+        "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
         "%matplotlib inline\n",
